fixing overflow

--- a/css/main.css
+++ b/css/main.css
@@ -12,6 +12,7 @@ body{
     padding-left: 20px;
     background-color: aqua;
     min-height: 100vh;
+    overflow: hidden;
 }
 
 .container{
